--- a/views/event.erb
+++ b/views/event.erb
@@ -7,6 +7,7 @@
         <h1><%= @event[:title] %></h1>
         <p><%= @event[:description] %></p>
         <% for rsvp in @rsvps %>
+            <% user = @user_table.where(:id => rsvp[:user_id]).to_a[0] %>
             <div class="media">
                 <% if rsvp[:going] %>
                     <i class="fas fa-thumbs-up fa-3x mr-3"></i>
@@ -14,7 +15,7 @@
                     <i class="fas fa-thumbs-down fa-3x mr-3"></i>
                 <% end %>
                 <div class="media-body">
-                    <h5 class="mt-0"><%= rsvp[:name] %></h5>
+                    <h5 class="mt-0"><%= user[:name] %></h5>
                     <%= rsvp[:comments] %>
                 </div>
             </div>
