--- a/views/new_rsvp.erb
+++ b/views/new_rsvp.erb
@@ -4,7 +4,7 @@
 </h2>
 <h1>RSVP for <%= @event[:title] %></h1>
 
-<form action="/events/<%= @event[:id] %>/rsvps/create">
+<form action="/events/<%= @event[:id] %>/rsvps/create" method="POST">
   <div class="form-group">
     <label>Are you going?</label>
     <select class="form-control" name="going">
@@ -12,15 +12,9 @@
       <option value="0">No</option>
     </select>
   </div>
-  <%# <input type="hidden" value="123" name="user_id"> %>
-  <div class="form-group">
-    <label>Your name</label>
-    <input type="text" class="form-control" name="name">
-  </div>
-  <div class="form-group">
-    <label>Email address</label>
-    <input type="email" class="form-control" placeholder="name@example.com" name="email">
-  </div>
+#  <%# <input type="hidden" value="123" name="user_id"> %>
+  
+
   <div class="form-group">
     <label>Comments</label>
     <textarea class="form-control" rows="3" name="comments"></textarea>
