--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 
-<form action="/users/create" method="post">
+<form action="/users/create" method="POST">
   <div class="form-group">
     <label>Your name</label>
     <input type="text" class="form-control" name="name">
